@@ -1,10 +1,12 @@
 0.15
     - Allow specifying SQLite's cache size with --storage-args
     - Never return a reply which is identical to the input
-    - Added a NoWhitespace tokenizer which splits on whitespace
+    - Added a NonWhitespace tokenizer which splits on whitespace
     - Instead of depending on version "0" of most modules (i.e. any
       version) depend on the latest CPAN version. We know this works;
       but we have no idea if the older modules work.
+    - When replying to some tokens, also considers known tokens which contain
+      them as a substring. This makes the NonWhitespace tokenizer more useful
 
 0.14 Sat Feb 13 17:07:30 GMT 2010
     - Fixed a bug in the test suite preventing optional backends from
